# Drone_Control_and_Navigation

./: README.md
code/: README.md
code/matlab/: ARDroneEPFC.slx  ARDronePFC.slx  setupEPFC.m  setupPFC.m
code/ros_package/epfc_controller/: CMakeLists.txt  package.xml
code/ros_package/epfc_controller/launch/: waypoints.launch
code/ros_package/epfc_controller/src/: epfc.py  epfc_part2.py  pfc.py
code/ros_package/epfc_controller/worlds/: waypoints_1.world  waypoints_2.world  waypoints_3.world  waypoints_4.world  waypoints_5.world  waypoints_6.world
simulation_videos/gazebo/: experiment1_epfc.mkv  experiment1_pfc.mkv  experiment2_epfc.mkv  experiment2_pfc.mkv  experiment3.mkv  experiment4.mkv  experiment5.mkv  experiment6.mkv
